--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,17 @@
       <version>2.0.2.RELEASE</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-datastore</artifactId>
+      <version>1.31.0</version>
+    </dependency>
+      <dependency>
+          <groupId>commons-collections</groupId>
+          <artifactId>commons-collections</artifactId>
+          <version>3.2.1</version>
+      </dependency>
   </dependencies>
 
   <build>
