Updated pom.xml to rename artifact

--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.example.flex.gettingstarted</groupId>
-  <artifactId>helloworld-springboot</artifactId>
+  <groupId>com.mnvsngv</groupId>
+  <artifactId>cookbook</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
